--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -28,5 +28,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            bentastic27/package-tracker:${{ github.event.release_tag_name }}
+            bentastic27/package-tracker:${{ github.sha }}
             bentastic27/package-tracker:latest
